tests/parse-errors/breakOutsideLoop.rock
While True
say "Hi"
(end loop)
break
